2001-01-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (erase): New method to reset image to background
 	color.
	(strokeAntiAlias): New method to control antialiasing of stroked
 	objects.

2001-01-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (channel): Renamed method from 'layer' to match
 	equivalent change in ImageMagick (ChannelImage).  Enumeration
 	names *Layer renamed to *Channel.

2001-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Montage.h (strokeColor): New method.
	(fillColor): New method.

	* lib/Image.cpp (replaceImage): Revised logic so that an inValid
 	image should be returned if a NULL pointer is passed.  Before this
 	change the existing image was preserved.
	(label): Work-around ImageMagick SetImageAttribute bug.

2001-01-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp : Adjusted to ImageMagick animation parameter API change.

2000-12-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableCompositeImage): Support specifying
 	composition rule.

2000-12-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (draw): Bugfix - the primitive string was not
 	properly null terminated. It is a wonder that the code usually
 	worked at all.  Thanks to afatela@marktest.pt for reporting it.

2000-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (deconstructImages): New STL function for
 	deconstructing an image list to assist with creating an animation.
	(mosaicImages): New STL function for inlaying an image list to
 	form a single coherent picture.

2000-12-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (convolve): New method to convolve image using
 	user-supplied convolution matrix.
	(unsharpmask): New method to replace image with a sharpened
 	version of the original image using the unsharp mask algorithm.

2000-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>