@@ -1,3 +1,7 @@
+2001-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Image.cpp (fillRule): New method to specify the rule to use when filling drawn objects.  Still needs documentation!
+
 2001-01-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Image.cpp (erase): New method to reset image to background
